--- a/.gitignore
+++ b/.gitignore
@@ -46,6 +46,7 @@ coverage.xml
 *.cover
 .hypothesis/
 .pytest_cache/
+coverage.out
 
 # Translations
 *.mo
@@ -102,3 +103,14 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+
+bin/
+pkg/
+.DS_Store
+*.swp
+*~
+
+.skaffold-*.yaml
+.kubernetes-manifests-*/
+
+vendor/
