Adding the frontend component with a single link to the home page. Reformatting all go code using gofmt. Update the README and skaffold yaml to define frontend deployment and dev guide.

--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -6,7 +6,9 @@ build:
   artifacts:
   - image: catalog
     context: catalog
+  - image: frontend
+    context: frontend
 deploy:
   kubectl:
     manifests:
-    - kubernetes-manifests/catalog.yaml
+    - kubernetes-manifests/**.yaml
