--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -8,6 +8,8 @@ build:
     context: catalog
   - image: frontend
     context: frontend
+  - image: recommendation
+    context: recommendation
 deploy:
   kubectl:
     manifests:
